drag&drop works

--- a/FlightControlWeb/wwwroot/Index.html
+++ b/FlightControlWeb/wwwroot/Index.html
@@ -57,18 +57,10 @@
                         <form class="my-form">
                             <input type="file" id="fileElem" multiple accept="image/*" onchange="handleFiles(this.files)">
                         </form>
-                        bla <br>
-                        bla <br>
-                        bla <br>
-                        bla <br>
-                        bla <br>
-                        bla <br>
-                        bla <br>
-                        bla <br>
-                        bla <br>
-                        bla <br>
-                        bla <br>
-                        bla <br>
+                        bla <br />
+
+
+                       
                         <label class="button" for="fileElem">Select JSON files</label>
                     </div>
                 </div>
