fixed master and made external table works

--- a/FlightControlWeb/wwwroot/Index.html
+++ b/FlightControlWeb/wwwroot/Index.html
@@ -68,24 +68,12 @@
                 </div>
                 <h4>External Flights</h4>
                 <div class="container external-flights-container rounded">
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
+                    <table id="externalFlightstable" class="table table-bordered">
+                        <tr>
+                            <th>Flight ID</th>
+                            <th>Airline</th>
+                        </tr>
+                    </table>
                 </div>
             </div>
         </div>
