plane icons and lines added to the map

--- a/FlightControlWeb/wwwroot/Index.html
+++ b/FlightControlWeb/wwwroot/Index.html
@@ -81,9 +81,9 @@
     
 <script src="https://code.jquery.com/jquery-3.5.1.js"
         integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-        crossorigin="anonymous"></script>
-    <script src="Scripts/Map.js"></script>
-    <script src="Scripts/DragnDrop.js"></script>
-    <script src="Scripts/TableUpdates.js"></script>
+        crossorigin="anonymous" async></script>
+    <script src="Scripts/Map.js" async></script>
+    <script src="Scripts/DragnDrop.js" async></script>
+    <script src="Scripts/TableUpdates.js" async></script>
 </body>
 </html>
