added remove button - not done

--- a/FlightControlWeb/wwwroot/Index.html
+++ b/FlightControlWeb/wwwroot/Index.html
@@ -61,6 +61,7 @@
                                 <tr>
                                     <th>Flight ID</th>
                                     <th>Airline</th>
+                                    <th>Remove</th>
                                 </tr>
                             </table>
                         </form>
@@ -73,6 +74,7 @@
                         <tr>
                             <th>Flight ID</th>
                             <th>Airline</th>
+                            <th>Remove</th>
                         </tr>
                     </table>
                 </div>
