client side flight is linked correctly

--- a/FlightControlWeb/wwwroot/Index.html
+++ b/FlightControlWeb/wwwroot/Index.html
@@ -31,24 +31,15 @@
                 <div class="rounded" id="mapid"></div>
                 <h4>Flight Details</h4>
                 <div class="container flight-details-container rounded">
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
-                    bla <br>
+                    <table id="flightDetails" class="table table-bordered">
+                        <tr>
+                            <th>Flight ID</th>
+                            <th>Airline</th>
+                            <th>Passengers</th>
+                            <th>Latitude</th>
+                            <th>Longitude</th>
+                        </tr>
+                    </table>
                 </div>
             </div>
             <div class="col-4 justify-content-center my-col">
@@ -74,7 +65,6 @@
                         <tr>
                             <th>Flight ID</th>
                             <th>Airline</th>
-                            <th>Remove</th>
                         </tr>
                     </table>
                 </div>
