Added a time script instead of the un-necessary TableUdates script

--- a/FlightControlWeb/wwwroot/Index.html
+++ b/FlightControlWeb/wwwroot/Index.html
@@ -77,7 +77,7 @@
         crossorigin="anonymous" async></script>
     <script src="Scripts/Map.js" async></script>
     <script src="Scripts/DragnDrop.js" async></script>
-<script src="Scripts/TableUpdates.js" async></script>
-<script src="Scripts/dataHandler.js"></script>
+<script src="Scripts/Time.js" async></script>
+<script src="Scripts/DataHandler.js"></script>
 </body>
 </html>
