--- a/FlightControlWeb/wwwroot/Index.html
+++ b/FlightControlWeb/wwwroot/Index.html
@@ -17,7 +17,8 @@
     <!--<script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>-->
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
-
+    <!--<script src="https://rawgit.com/notifyjs/notifyjs/master/dist/notify.js"></script>-->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/notify/0.4.2/notify.min.js"></script>
     <title>Flight Controller</title>
 </head>
 
@@ -70,14 +71,14 @@
                 </div>
             </div>
         </div>
-    </div>
-    
-<script src="https://code.jquery.com/jquery-3.5.1.js"
-        integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-        crossorigin="anonymous" async></script>
+</div>
+
+
     <script src="Scripts/Map.js" async></script>
     <script src="Scripts/DragnDrop.js" async></script>
-<script src="Scripts/Time.js" async></script>
-<script src="Scripts/DataHandler.js"></script>
+    <script src="Scripts/Time.js" async></script>
+    <script src="Scripts/DataHandler.js"></script>
+    <script src="Scripts/Notifications.js" async=""></script>
+    <!--<script src="Scripts/notify.min.js"></script>-->
 </body>
 </html>
