small js file organization

--- a/FlightControlWeb/wwwroot/Index.html
+++ b/FlightControlWeb/wwwroot/Index.html
@@ -71,14 +71,15 @@
                 </div>
             </div>
         </div>
-</div>
+    </div>
 
 
     <script src="Scripts/Map.js" async></script>
     <script src="Scripts/DragnDrop.js" async></script>
     <script src="Scripts/Time.js" async></script>
-    <script src="Scripts/DataHandler.js"></script>
-    <script src="Scripts/Notifications.js" async=""></script>
+    <script src="Scripts/DataHandler.js" async></script>
+    <script src="Scripts/Notifications.js" async></script>
+    <script src="Scripts/Flight.js" async></script>
     <!--<script src="Scripts/notify.min.js"></script>-->
 </body>
 </html>
